# RecapKt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yaml
src/: main.py
src/benchmarking/: baseline.py  baseline_logger.py  calculate_mcp_memory_metrics.py  calculate_mcp_metrics.py  calculate_mcp_response_metrics.py  deserialize_mcp_data.py  llm_evaluation.py  memory_logger.py  metric_calculator.py  prompts.py  semantic_similarity.py
src/benchmarking/agent_chat/: calculate_agent_chat_response_metrics.py  chat-history.json  chat-history3.json  chat-history4.json  chat-history5.json  chat-history6.json  chat-history7.json  combined_chat_history_sessions.json  create_chat.py  deserialize_agent_chat.py
src/recsum/: dialogue_system.py  graph_nodes.py  models.py  prompts.py  response_generator.py  summarizer.py
src/summarize_algorithms/core/: base_dialogue_system.py  base_summarizer.py  graph_nodes.py  memory_storage.py  models.py  prompts.py  response_generator.py
src/summarize_algorithms/memory_bank/: dialogue_system.py  prompts.py  summarizer.py
src/summarize_algorithms/recsum/: dialogue_system.py  prompts.py  summarizer.py
src/utils/: configure_logs.py
tests/: test_main.py  test_summarizer.py
tests/recsum_tests/: test_response_generator.py  test_summarizer.py
