[metadata]
name = "RecapKt"
author = "ArtemKushnir"
url = "https://github.com/explyt/RecapKt.git"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "Q", "UP"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
files = ["src"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--color=yes", "-s"]