url = "https://github.com/emnigma/RecapKt.git"
[project]
name = "recapkt"
version = "0.1.0"
description = "A dialogue system for text summarization"
authors = [{name = "ArtemKushnir"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
recapkt = "src.main:main"

[project.urls]
Homepage = "https://github.com/emnigma/RecapKt.git"
Repository = "https://github.com/emnigma/RecapKt.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "Q", "UP"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
files = ["src"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--color=yes", "-s"]